# cluttr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
examples/: .env.example  chat_with_memory.py  chat_with_memory_openai.py
src/cluttr/: __init__.py  client.py  config.py  db.py  embeddings.py  llm.py  models.py
src/cluttr/embeddings/: __init__.py  base.py  bedrock.py  openai.py
src/cluttr/llm/: __init__.py  base.py  bedrock.py  openai.py
website/: .gitignore  package-lock.json  package.json  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
